--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.14.5"
+    "astro": "^5.14.5",
+    "motion": "^12.23.24",
+    "qrcode": "^1.5.4"
   }
 }
